...
        navigationItem.title = "LikePics"
        navigationController?.navigationBar.prefersLargeTitles = true

        view.backgroundColor = Asset.Color.background.color

        collectionView = UICollectionView(frame: view.frame, collectionViewLayout: Layout.createLayout())
        collectionView.accessibilityIdentifier = "SceneRootSideBarController.collectionView"
        collectionView.backgroundColor = .clear
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        collectionView.allowsSelection = true
        collectionView.allowsMultipleSelection = false
        view.addSubview(collectionView)
        NSLayoutConstraint.activate(collectionView.constraints(fittingIn: view))
...
