...
}

// MARK: - Configuration

extension SceneRootTabBarController {
    private func configureTabBar() {
        tabBar.accessibilityIdentifier = "SceneRootTabBarController.tabBar"

        let viewControllers = SceneRoot.TabBarItem.allCases.map {
            $0.makeViewController(from: intent, by: factory)
        }

        setViewControllers(viewControllers, animated: false)
...
